# old_proj_B

./: Astar.h  Bfs.cpp  Bfs.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  Dfs.cpp  Equal.cpp  Equal.h  FileCacheManager.h  Isearcher.cpp  Isearcher.h  MyClientHandler.cpp  MyClientHandler.h  MySerialServer.cpp  MySerialServer.h  MyStringReverseClient.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.h  Problem.cpp  Problem.h  Searchable.cpp  Searchable.h  Searcher.cpp  Searcher.h  Server.h  Solution.cpp  Solution.h  Solver.cpp  Solver.h  State.cpp  State.h  StringReverser.cpp  StringReverser.h  main.cpp
cashManagers/: FileCacheManager.h
interface/: CacheManager.h  ClientHandler.h  Isearcher.h  Searchable.h  Searcher.h  Server.h  Solver.h  State.h
parser/: Parser.h  StringReverserParser.cpp  StringReverserParser.h
searchAlg/: Astar.cpp  BFS.cpp  BFS.h  Bestfs.cpp  Bestfs.h  Bfs.cpp  Bfs.h  Dfs.h  HillClimbing.cpp  HillClimbing.h
searchable/: Matrix.cpp  Matrix.h
solvers/: StringReverser.cpp  StringReverser.h
